remove unused packages from all classes